--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
@@ -31,12 +33,12 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.8",
     "eslint": "^4.15.0",
     "eslint-loader": "^1.9.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "less-loader": "^4.0.5",
+    "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "style-loader": "^0.19.1"
